# zca-desktop

./: .gitignore  .zalo-cred.example.json  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  package.json  vite.config.js
.codex/: hooks.json
.codex/agents/: adapter-compatibility-reviewer.toml  advisor.toml  api-consistency-reviewer.toml  architecture-reviewer.toml  eval-rubric-reviewer.toml  performance-reviewer.toml  release-harness-reviewer.toml  reliability-reviewer.toml  security-reviewer.toml  trace-failure-analyst.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  eval-nightly.yml  harness.yml
.harness/: PLAN.md  PROGRESS.md  compaction-snapshot.json  config.json  feature-list.schema.json  feature_list.json  installed.json  permissions.compiled.json  permissions.json  schema-policy.json  skill-registry.json  telemetry.jsonl
.harness/docs/: agent-failures.md  architecture-fitness.md  architecture.md  browser-validation.md  context-rules.md  core-beliefs.md  env-vars.md  evidence-attestation.md  evidence-bundle.md  explain.md  failure-taxonomy.md  golden-principles.md  logging.md  memory-cheatsheet.md  operational-state.md  permission-model.md  policy-pack-authoring.md  runtime-parity-scorecard.md  schema-policy.md  strictness-ladder.md  team-pr-adoption.md  tech-debt-tracker.md  telemetry-schema.md  trace-quality.md  verify-runbook.md
.harness/evidence/: account-switcher.json  app-csp-hardening.json  chat-ui-redesign.json  cloud-attachment-send.json  cloud-auth-devices.json  cloud-desktop-account-management.json  cloud-desktop-registration.json  cloud-media-mirroring.json  cloud-message-file-store.json  cloud-message-richness.json  cloud-realtime-isolation.json  cloud-reauth-restore.json  cloud-reconnect-offline.json  cloud-ui-polish.json  cloud-zalo-session-host.json  codex-runtime-hooks.json  credential-import.json  dev-session-loader.json  feature-1.json  fix-outgoing-echo-dupe.json  fix-self-listen-outgoing.json  fix-thread-avatar-persistence.json  harness-config-skillsdir.json  listener-events.json  message-cache.json  per-account-routing.json  qr-login.json  rich-messages-stickers.json  rich-messages.json  saas-backend-foundation.json  secure-cred-store.json  send-text.json  session-manager.json  session-restore.json  settings-panel.json  single-login.json  tauri-scaffold.json  thread-list.json  zca-dep-wired.json
.harness/examples/: mcp.json.example
.harness/failures/: taxonomy.json
.harness/fixtures/: mock-responses.json
.harness/memory/: current-summary.md  ledger.jsonl
.harness/project/: state.json
.harness/reports/: cloud-attachment-send.html  cloud-device-restore-consent.html  codex-runtime-hooks.html
.harness/runners/: eval-runner.mjs  structural-test.mjs
.harness/schemas/: bypass-request.schema.json  eval-task.schema.json  evidence-bundle.schema.json  explain-block-record.schema.json  failure-record.schema.json  orchestration-contract.schema.json  permission-compile-output.schema.json  policy-pack.schema.json  review-decision.schema.json  (+6 more)
Casks/: zca-desktop.rb
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev-npm.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: export_dev_cred.rs
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/command/: cloud.rs  magic_link_callback.rs  mod.rs
apps/desktop/src-tauri/src/config/: mod.rs
apps/desktop/src-tauri/src/session/: mod.rs
apps/desktop/src-tauri/src/store/: crypto.rs  mod.rs
apps/desktop/src-tauri/src/types/: account.rs  cloud_callback.rs  contact.rs  credentials.rs  mod.rs  qr.rs
apps/desktop/src-tauri/src/zalo/: mod.rs
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/server/: .env.prod.example  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
apps/server/migrations/: 202606030001_saas_foundation.down.sql  202606040001_message_sender_avatar.down.sql  202606040001_message_sender_avatar.up.sql  202606040002_message_rich_payload.up.sql  202606060001_oauth_device_login.down.sql  202606060001_oauth_device_login.up.sql  202606080001_oauth_login_platform.down.sql  202606080001_oauth_login_platform.up.sql
apps/server/scripts/: live-hosted-send-validate.mjs  live-hosted-zalo-smoke.mjs  live-provider-smoke.mjs  smoke-mailhog.mjs
apps/server/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  mailer.rs  models.rs  oauth.rs  routes.rs  sessions.rs  storage.rs  zalo_host.rs
crates/zca-cloud-client/: Cargo.toml
crates/zca-cloud-client/src/: lib.rs
crates/zca-keychain/: Cargo.toml
crates/zca-keychain/src/: lib.rs
crates/zca-types/: Cargo.toml
crates/zca-types/src/: lib.rs
docs/: ARCHITECTURE.md  CREDENTIALS.md  DEPLOYMENT.md  MOBILE.md  PRIVACY.md  THREAT_MODEL.md
reports/: cloud-endpoint-hotfix-2026-06-06.html  production-dmg-signing-2026-06-05.html  startup-crash-hotfix-2026-06-06.html
server/: .dockerignore  .env.prod.example  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
server/migrations/: 202606030001_saas_foundation.up.sql  202606040002_message_rich_payload.down.sql
server/scripts/: run-dev-smoke.sh  smoke-dev.mjs
server/src/: auth.rs  config.rs  crypto.rs  db.rs  error.rs  mailer.rs  main.rs  models.rs  routes.rs  sessions.rs  zalo_host.rs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/command/: cloud.rs  mod.rs
src-tauri/src/config/: logging.rs  redact.rs
src-tauri/src/session/: mod.rs
src-tauri/src/store/: crypto.rs  db.rs
src-tauri/src/types/: account.rs  contact.rs  events.rs  link.rs  mod.rs  quote.rs  reaction.rs  sticker.rs  stored.rs  undo.rs
src-tauri/src/zalo/: mod.rs
src/lib/: log.ts  (+3 more)
(+1046 files in other folders)
