[package]
name = "zca-cloud-server"
version = "0.1.0"
edition = "2021"
publish = false
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hkdf = "0.12"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls", "hostname"] }
object_store = { version = "0.11", features = ["aws"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros", "derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zca-rust = { git = "https://github.com/tuanle96/zca-rust", rev = "c95c88b3ad6ac161dfcaa87003171c50a0425faa" }

[dev-dependencies]
serde_json = "1"
